--- a/requirements.txt
+++ b/requirements.txt
@@ -70,6 +70,7 @@ llama-index-embeddings-fastembed==0.1.4
 llama-index-embeddings-openai==0.1.6
 llama-index-indices-managed-llama-cloud==0.1.4
 llama-index-legacy==0.9.48
+llama-index-llms-fireworks==0.1.4
 llama-index-llms-openai==0.1.12
 llama-index-multi-modal-llms-openai==0.1.4
 llama-index-program-openai==0.1.4
