--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,7 @@ exceptiongroup==1.2.0
 executing==2.0.1
 fastembed==0.2.4
 filelock==3.13.1
+fire==0.6.0
 flatbuffers==24.3.7
 frozenlist==1.4.1
 fsspec==2024.3.0
@@ -61,6 +62,7 @@ langchain-community==0.0.28
 langchain-core==0.1.32
 langchain-experimental==0.0.54
 langchain-text-splitters==0.0.1
+langchainhub==0.1.15
 langsmith==0.1.27
 llama-index==0.10.20
 llama-index-agent-openai==0.1.5
@@ -138,6 +140,7 @@ streamlit==1.32.2
 striprtf==0.0.26
 sympy==1.12
 tenacity==8.2.3
+termcolor==2.4.0
 tiktoken==0.6.0
 tokenizers==0.15.2
 toml==0.10.2
@@ -145,6 +148,7 @@ toolz==0.12.1
 tornado==6.4
 tqdm==4.66.2
 traitlets==5.14.2
+types-requests==2.31.0.20240311
 typing-inspect==0.9.0
 typing_extensions==4.10.0
 tzdata==2024.1
