--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ comm==0.2.2
 dataclasses-json==0.6.4
 debugpy==1.8.1
 decorator==5.1.1
+defusedxml==0.7.1
 Deprecated==1.2.14
 dirtyjson==1.0.8
 distro==1.9.0
@@ -58,6 +59,7 @@ jsonschema-specifications==2023.12.1
 jupyter_client==8.6.1
 jupyter_core==5.7.2
 langchain==0.1.12
+langchain-anthropic==0.1.4
 langchain-community==0.0.28
 langchain-core==0.1.32
 langchain-experimental==0.0.54
